# swf-bitmap

./: .gitmodules  README.md
rs/: Cargo.toml  README.md
rs/src/: decode.rs  encode.rs  lib.rs
ts/: README.md  gulpfile.ts  package.json
ts/src/lib/: image.ts
ts/src/lib/decode/: x-swf-bmp.ts
ts/src/lib/encode/: pam.ts
ts/src/main/: main.ts
ts/src/test/: bitmap.spec.ts  compare-pixels.ts  utils.ts
