[package]
name = "swf-bitmap"
version = "0.10.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "SWF bitmap"
documentation = "https://github.com/open-flash/swf-bitmap"
homepage = "https://github.com/open-flash/swf-bitmap"
repository = "https://github.com/open-flash/swf-bitmap"
readme = "./README.md"
keywords = ["bitmap", "swf", "flash"]
license = "AGPL-3.0-or-later"
edition = "2018"

[badges]
travis-ci = { repository = "open-flash/swf-bitmap", branch = "master" }

[lib]
name = "swf_bitmap"
path = "src/lib.rs"

[dependencies]
swf-types = "^0.10.0"

[dev-dependencies]
serde = "^1.0.102"
serde_json_v8 = "^0.0.1"
test-generator = "^0.3.0"

[workspace]
members = ["bin"]
